--- a/12.SpringCloud/RocketMQ_Openfeign/consumer/pom.xml
+++ b/12.SpringCloud/RocketMQ_Openfeign/consumer/pom.xml
@@ -85,7 +85,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>cn.edu.xmu.rocketmqdemo.ConsumerApplication</mainClass>
+                    <mainClass>cn.edu.xmu.restfuldemo.ConsumerApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
