--- a/12.SpringCloud/RocketMQ_Openfeign/producer/pom.xml
+++ b/12.SpringCloud/RocketMQ_Openfeign/producer/pom.xml
@@ -71,7 +71,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>cn.edu.xmu.rocketmqdemo.ProducerApplication</mainClass>
+                    <mainClass>cn.edu.xmu.restfuldemo.ProducerApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
