--- a/5.MyBatis/productdemo/src/main/resources/application.yaml
+++ b/5.MyBatis/productdemo/src/main/resources/application.yaml
@@ -13,10 +13,10 @@ spring:
     #JDBC驱动
     driver-class-name: com.mysql.cj.jdbc.Driver
     #数据库服务器url
-    url: jdbc:mysql://mysql:3306/oomall_demo?serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/oomall_demo?serverTimezone=Asia/Shanghai
     #数据库服务器用户名和密码
-    username: demouser
-    password: 123456
+    username: root
+    password: 1111
     #数据库连接池
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
